staviv_html_tag_STOLE

--- a/first_html.html
+++ b/first_html.html
@@ -1,6 +1,9 @@
 <div>
   Zoran Ristovski
 </div>
+<html>
+  STOLE STOLE
+</html>
 <div>
-  Zoran Ristovski bambara bambara
+  Zoran Ristovski bambara bambara 2git
 </div>
