sega_gi_dodadov_top_level_tagovite_body_i_html

--- a/first_html.html
+++ b/first_html.html
@@ -2,7 +2,9 @@
   Zoran Ristovski
 </div>
 <html>
-  STOLE STOLE
+  <body>
+    <text>STOLE STOLE</text>
+  </body>
 </html>
 <div>
   Zoran Ristovski bambara bambara 2
